# agent

./: .gitignore  MANIFEST.in  Makefile  atest_agent.robot  browserstack.yml  pyproject.toml  requirements-browserstack.txt  requirements-dev.txt  requirements.txt
Agent/: AgentKeywords.py  __init__.py  _step_runner.py
Agent/agent/: _aiconnector.py  _promptcomposer.py
Agent/agent/llm/: __init__.py  _anthropic.py  _deepseek.py  _factory.py  _gemini.py  _huggingface.py  _ollama.py  _openaiclient.py  facade.py
Agent/agent/vlm/: omniparser_orchestrator.py  omniparser_selector.py
Agent/ai/: _aiconnector.py  _promptcomposer.py  reademe.me
Agent/ai/llm/: _anthropic.py  _baseclient.py  _converters.py  _deepseek.py  _factory.py  _gemini.py  _ollama.py  _openaiclient.py  facade.py
Agent/ai/vlm/: __init__.py  omniparser_client.py  omniparser_orchestrator.py  omniparser_parser.py  omniparser_selector.py
Agent/config/: __init__.py  llm_models.json  model_config.py
Agent/utilities/: __init__.py  _logger.py  _screenshotparser.py  _tiktoken.py  readme.me
Agent/utilities/imguploader/: _imgbase.py  _imgbb.py  _imghost.py  imghandler.py  readme.me
docs/onboarding/: 03-traditional-automation-with-code.md  04-robot-framework-better-but-limited.md  07-dev-setup-quickstart.md
src/AiHelper/agent/vlm/: __init__.py  omniparser_client.py  omniparser_orchestrator.py  omniparser_selector.py
src/AiHelper/config/: config.py
